# server-blueprint

./: .gitignore  CHANGELOG.md  Cargo.toml  DEMO.md  DEPLOY.md  README.md  dist-workspace.toml  flake.nix  foundry.toml  generate-auth-token.ts  mcp-blueprint-flowchart.md  mcp.toml  package.json  remappings.txt  x.sh
.github/workflows/: build-setup.yml  ci.yml  foundry.yml  release.yml
blueprint/: Cargo.toml
blueprint/src/: error.rs  lib.rs  transport.rs
blueprint/src/jobs/: mcp_start.rs  mcp_stop.rs  mod.rs  server_start.rs  server_stop.rs
blueprint/src/manager/: docker.rs  js.rs  mod.rs  python.rs
blueprint/tests/: e2e.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
contracts/src/: HelloBlueprint.sol
examples/docker/: README.md  nginx.json  postgres.json  redis.json
examples/javascript/: README.md  http-server.json
examples/legacy/: 00_mcp_python3.json  01_mcp_js.json  03_tangle_mcp_docker.json
examples/python/: README.md  http-server.json
fixtures/: 01_mcp_js.json  02_mcp_local_docker.json  03_tangle_mcp_docker.json  alice_ecdsa.json  apache_server.json  nginx_server.json  nodejs_app.json  postgres_database.json  python_fastapi.json  redis_database.json
