[workspace]
resolver = "3"
members = ["blueprint", "cli"]

[workspace.package]
version = "0.2.0-prerelease.3"
description = "Deploy any HTTP server or database as a blueprint in seconds"
edition = "2024"
authors = ["Shady Khalifa <dev+github@shadykhalifa.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.network"
repository = "https://github.com/tangle-network/server-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "web-programming::http-server"]
keywords = ["tangle", "blueprint", "avs", "server", "docker"]

[workspace.dependencies]
server-blueprint = { path = "blueprint" }

# blueprint-sdk = { version = "0.1.0-alpha.11", default-features = false }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false }
tokio = { version = "1", default-features = false }
color-eyre = "0.6"
thiserror = "2"
futures = { version = "0.3", default-features = false }
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
rmcp = { version = "0.1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
axum = { version = "0.8", default-features = false }
uuid = { version = "1", default-features = false }
docktopus = { version = "0.3.0", default-features = false }
bytes = { version = "1", default-features = false }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
