[package]
name = "mcp-blueprint"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
docktopus = { workspace = true, features = ["deploy"] }
uuid = { workspace = true, features = ["v4"] }
rmcp = { workspace = true, features = [
  "base64",
  "server",
  "client",
  "tower",
  "transport-child-process",
  "transport-io",
  "transport-sse-server",
  "macros",
] }
axum = { workspace = true, features = [] }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }
