[package]
name = "server-blueprint"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
docktopus = { workspace = true, features = ["deploy"] }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }
